--- a/src/index.pug
+++ b/src/index.pug
@@ -6,7 +6,7 @@ head
     link(rel='apple-touch-icon' sizes='180x180' href='./assets/img/favicons/apple-touch-icon.png')
     link(rel='icon' type='image/png' sizes='32x32' href='./assets/img/favicons/favicon-32x32.png')
     link(rel='icon' type='image/png' sizes='16x16' href='./assets/img/favicons/favicon-16x16.png')
-    title Ivan Portfolio
+    title Holovko Ivan Portfolio
     style.
         body { background-color: black; }
     include components/svg
@@ -24,4 +24,5 @@ head
     include pages/reports/regexp/regexp
     include pages/reports/accessibility/accessibility
     include components/backButton/backButton
+    include components/langButton/langButton
     include components/preloader/preloader
