--- a/src/pages/works/RPG/RPG.pug
+++ b/src/pages/works/RPG/RPG.pug
@@ -3,10 +3,6 @@ include ../btn
 section.work.RPG
     .container
         h2#rpg RPG Online Game
-        p Здесь получилось написать онлайн игру в которой могут играть сразу несколько человек.
-        p Прикольный опыт работы с сокетами и с серверной частью.
-        p Есть онлайн чат.
-        p Стек: HTML / SASS / JS/ Webpack5 / Websocket(socket.io) / EsLint / Prettier
-        p Что бы проверить работоспособность игры и чата, можно запустить игру на нескольких вкладках.
-        +btn('Результат смотрим тут', 'https://r-p-g-game.herokuapp.com/')
-        +btn('Код смотрим тут', 'https://github.com/IvanNavin/js-pro-game', 'letter-spacing: 38px')
+        p
+        +btn('result', 'https://r-p-g-game.herokuapp.com/')
+        +btn('code', 'https://github.com/IvanNavin/js-pro-game', 'letter-spacing: 38px')
