--- a/src/pages/works/pokedex/pokedex.pug
+++ b/src/pages/works/pokedex/pokedex.pug
@@ -4,11 +4,6 @@ section.work.pokedex
     .container
         h2#pokedex Pokedex
         p
-            | Pokedex - это результат продвинутого Реакт марафона, который проводит Зар Захаров
-        p В этом марафоне мне очень понравился дизайн и новые технологии Реакт
-        p
-            | В дизайне был kit - набор и названия всех цветов, градиентов, шрифты и их размеры и т.д.
-        p Входе марафона я реализовал в этом проэкте следующие технологии:
         br
         ul(classname='{s.ul}')
             li React
@@ -22,22 +17,14 @@ section.work.pokedex
             li Jest
             li SSR
             li Hapi
-        p На самом деле в этом марафоне много интересных моментов.
-        p Весь проэкт написан на хуках.
         p
-            | В последствии мне это чень помогло - когда я перешёл в новую комманду по реакту, я тут же начал переводить хоки
-            | на хуки. Впоследствии я смог поделиться этими знаниями с коллективом.
         br
         br
         p
-            | К сожалению апишка написана с http протоколом и на https не работает ниже видео демонстрация работающего проекта
         br#examplePokedex
         br
         br
         p
-            | В ходе написания данного проекта я самостоятельно добавил на своё усмотрение фильтр по типам и атаке, а так-же
-            | сделал модальные окна через "createPortal".
-        p В будующем я планирую добавить в проект бесконечную подгрузку и storyBook
         br
-        +btn('Результат смотрим тут', 'https://pokedex777.vercel.app/')
-        +btn('Код смотрим тут', 'https://github.com/IvanNavin/Pokedex777', 'letter-spacing: 38px')
+        +btn('result', 'https://pokedex777.vercel.app/')
+        +btn('code', 'https://github.com/IvanNavin/Pokedex777', 'letter-spacing: 38px')
