--- a/src/pages/about/about.pug
+++ b/src/pages/about/about.pug
@@ -23,25 +23,13 @@
 
 section.about
     .container
-        h2 Всем привет!
-        p
-            | С 12 лет я мечтал быть программистом и творить, что-то интересное. Я понимал, что это очень сложно - но меня это не пугало! Я изучал сначала Basic, Pascal и потом Delphi. Но жизнь так сложилась, что мой жизненный путь пошел другим путём. И спустя некоторое время я снова решил заниматься любимым делом. В интернете много доступной информации и я стал изучать Front-end разработку.
-        p
-            | Сейчас я занимаюсь разработкой Front-end приложений, вёрсткой и обслуживанием сайтов.
-        p
-            | Мне нравится превращать сложные задачи в простые, красивые и интуитивно понятные конструкции.
-        p Когда я не пишу код, я играю на ps5, жарю мясо или уделяю время семье.
-        p C 2018 по 2021 год я работал в компании "EvoPlay".
-        p После этого я устроился в компанию "Luxoft".
-        p Мне нравятся интересные задачи и находить интересные решения для них
-        p В компании я стараюсь проявлять свои софт-скилы
-        p Провожу доклады и стараюсь быть нужным.
-        p Имею опыт работы с:
+        h2
+        p.text
         ul.skills
             each skill in skills
               li= skill
-        p Паралельно изучаю новые технологии и стараюсь ими делится с другими.
-        h2.facts-header Случайные факты:
+        p.description
+        h2.facts-header
         ul.facts(data-facts='')
         a.download(href='./cv/CV_Holovko_Ivan.pdf' download='CV_Holovko_Ivan.pdf')
             span
@@ -50,4 +38,4 @@ section.about
             span
             span.star-blink
                 div
-            |                     скачать резюме
+            b
