--- a/src/pages/works/english/englishLearn.pug
+++ b/src/pages/works/english/englishLearn.pug
@@ -3,16 +3,9 @@ include ../btn
 section.work.english-learn
     .container
         h2#english English learn
-        p English learn - это результат Реакт-марафона от Зара Захарова
         p
-            | В ходе этого марафона мы познакомились с React и его жизненными циклами, научились работать с формами и с сервером "Firebase". Научились работать с пропсами и стейтом, пробрасывали их через компоненты и обратно. Для начала написали самописный редакс, что бы понимать как он работает и в последствии подключили его. Иконки и формы мы брали из коллекции AntDesign. Подключили апишку словаря и использовали хранилище firebase для запоминания слов юзера. Прикрутили React Router и Thunk.
         br
         p
-            | Что бы использовать возможности сайта, нужно внести неизвестное английское слово в поле ввода. Далее это слово появится в базе данных "Firebase" и под полем ввода. Если кликнуть на слово, карточка перевернётся и с другой стороны карточки будет уже слово на русском языке. Далее это слово можно вычеркнуть, как запомненное или удалить как ненужное. Тогда это слово удалится и из базы ваших слов.
-        br
-        p Логин: reactmarathon@gmail.com
-        p Пароль: 12345678
-        br
         // <p>На данный момент, я обратил внимание, что слова юзера появляются после перезагрузки страницы</p>
-        +btn('Результат смотрим тут', 'https://learn-english-card.netlify.app/')
-        +btn('Код смотрим тут', 'https://github.com/IvanNavin/EnglishLearn/', 'letter-spacing: 38px')
+        +btn('result', 'https://learn-english-card.netlify.app/')
+        +btn('code', 'https://github.com/IvanNavin/EnglishLearn/', 'letter-spacing: 38px')
