--- a/src/pages/works/portfolio/portfolio.pug
+++ b/src/pages/works/portfolio/portfolio.pug
@@ -4,35 +4,4 @@ section.work.portfolio
     .container
         h2#portfolio Portfolio
         p
-            | Я считаю, что это важно иметь профессиональный сайт портфолио, который отображает все мои проекты и достижения.
-        br
-        p
-            | Сначала я и не представлял как должен выглядеть сайт партфолио и что в нём должно быть. Я начал гуглить и читать статьи, что должно быть в портфолио.
-        br
-        p
-            | Я составил план, определился с цветовой схемой, набросал пару идей. И принялся за разработку. Я понимал, что Он должен быть уникальным и креативным. Фух, это было сложно!
-        br
-        p
-            | Сначала пользователь попадает на главную страницу. Я подумал - это должно быть что-то креативное и уникальное, в моем случае я использовал эффект fluid. Библиотеки я такой не нашёл, но нашёл места где этот эффект приминялся и по заимствовал его от туда - немного преобразив его по своему. Тут на главной странице, можно взаимодействовать с анимацией, нажатием на SPACE - появятся вспышки флюид-анимаций, нажатием на "Р" можно остановить анимацию, как бы нажав на паузу. Ну и естественно нажав и проведя по экрану мышкой анимация приводится к действию.
-        br
-        p
-            | Дальше пользователь может перейти на страницу «Обо мне» - на этой странице будет личная история, стэк технологий которыми я владею, опыт в работе и случайные факты обо мне =)
-        br
-        p
-            | На этом этапе я подумал, что было бы хорошо добавить кнопку назад. Нашёл интересную канвас анимацию и применил её к кнопке "Назад".
-        br
-        p
-            | Пользователь может перейти на страницу проектов (здесь будут жить все лучшие проекты с описанием используемых технологий и ссылками на Github и живые видеодемонстрации).
-        br
-        p Пользователь может перейти на страницу «контакты» и связаться со мной.
-        br
-        p
-            | Пользователь может перейти на страницу моих докладов и почерпнуть те знания которыми я делюсь с другими.
-        br
-        p
-            | В начале написания кода я незнал, каким стэком будет обладать мой сайт портфолио. Я очень хотел написать его на React но поймите меня правильно во время написания кода я владел базовыми знаниями React и вполне достаточными знаниями ES6. Я понимал, что мне нужно настраивать и добавлять функции так, что бы это демонстрировало мои навыки в программировании. Поэтому я написал его на нативном JS
-        br
-        p
-            | Основная цель этого веб-сайта-портфолио - продемонстрировать проекты, которые я создал, ну и конечно же сам сайт также считается проектом!
-        br
-        +btn('Код смотрим тут', 'https://github.com/IvanNavin/portfolio', 'letter-spacing: 38px')
+        +btn('code', 'https://github.com/IvanNavin/portfolio', 'letter-spacing: 38px')
