--- a/src/pages/works/thanos/thanosEffect.pug
+++ b/src/pages/works/thanos/thanosEffect.pug
@@ -3,13 +3,6 @@ include ../btn
 section.work.thanos-effect
     .container
         h2#thanos Thanos Effect
-        p Работая в EvoPlay мне поступила задача: воспроизвести эфект Таноса.
-        p Что нужно сделать?
         p
-            | Нужно сделать распад картинок, как в фильме Мстители 3: Война бесконечности. Картинки должны распадаться на пепел и разлетаться по ветру.
-        p Немного полапатив интернет, я обнаружил много примеров данной реализации.
-        p
-            | Все примеры которые я находил, были сделаны с библиотекой html2canvas, меня это немного не устраивало! Т.к. мне нужно разщиплять на атомы только картинки а не любой контент. А для этих целей подойдут и обычные средства canvas.
-        p Поэтому я сделал этот эффект без применения библиотеки html2canvas
-        +btn('Результат смотрим тут', 'https://destructurizator.netlify.app/')
-        +btn('Код смотрим тут', 'https://github.com/IvanNavin/destructurizator', 'letter-spacing: 38px')
+        +btn('result', 'https://destructurizator.netlify.app/')
+        +btn('code', 'https://github.com/IvanNavin/destructurizator', 'letter-spacing: 38px')
