--- a/src/pages/reports/accessibility/accessibility.pug
+++ b/src/pages/reports/accessibility/accessibility.pug
@@ -1,4 +1,4 @@
 section.report.accessibility
-    h2#accessibility Разработка доступных интерфейсов
-    h2 Ссылка на доклад
+    h2#accessibility
+    h2
     a(href='https://developing-accessible-interfaces.netlify.app/' target='_blank') https://developing-accessible-interfaces.netlify.app/
