fixed social links

--- a/src/pages/contacts/contacts.pug
+++ b/src/pages/contacts/contacts.pug
@@ -1,13 +1,13 @@
 section.contacts
     .wrapper
         .social-links.animate
-            a.social-link.linkedin(href='https://www.linkedin.com/in/holovkoivan/' title='link to linkedin profile')
+            a.social-link.linkedin(href='https://www.linkedin.com/in/holovkoivan/' title='link to linkedin profile' target='_blank')
                 svg
                     use(xlink:href='#linkedin')
-            a.social-link.github(href='https://github.com/IvanNavin/' title='link to github profile')
+            a.social-link.github(href='https://github.com/IvanNavin/' title='link to github profile' target='_blank')
                 svg
                     use(xlink:href='#github')
-            a.social-link.instagram(href='https://www.instagram.com/oivanholovko/' title='link to instagram profile')
+            a.social-link.instagram(href='https://www.instagram.com/oivanholovko/' title='link to instagram profile' target='_blank')
                 svg
                     use(xlink:href='#instagram')
         h2 Сказать привет
