--- a/src/pages/about/about.pug
+++ b/src/pages/about/about.pug
@@ -11,6 +11,7 @@
         "React",
         "Redux",
         "Thunk",
+        "Redux Toolkit Query",
         "TypeScript",
         "Jest",
         "GraphQL",
@@ -19,6 +20,8 @@
         "Webpack",
         "EsLint",
         "Prettier",
+        "Bootstrap",
+        "MaterialUI",
     ];
 
 section.about
