--- a/src/pages/works/RPG/RPG.pug
+++ b/src/pages/works/RPG/RPG.pug
@@ -4,5 +4,5 @@ section.work.RPG
     .container
         h2#rpg RPG Online Game
         p
-        +btn('result', 'https://r-p-g-game.herokuapp.com/')
+        +btn('result', 'https://quest-world.herokuapp.com/')
         +btn('code', 'https://github.com/IvanNavin/js-pro-game', 'letter-spacing: 38px')
