--- a/src/index.pug
+++ b/src/index.pug
@@ -19,6 +19,7 @@ head
     include pages/works/thanos/thanosEffect
     include pages/works/portfolio/portfolio
     include pages/works/english/englishLearn
+    include pages/works/ganttChart/ganttChart
     include pages/works/RPG/RPG
     include pages/contacts/contacts
     include pages/performances/performances
