--- a/src/pages/myWorks/myWorks.pug
+++ b/src/pages/myWorks/myWorks.pug
@@ -1,6 +1,12 @@
 -
   var works = [
       {
+          name: 'Gantt Chart',
+          status: 'New',
+          dataHref: 'ganttChart',
+          stack: ['React', 'TypeScript', 'Redux Toolkit', 'React Datepicker', 'Sass', 'React Hook Form', 'MUI', 'Es-lint', 'Prettier'],
+      },
+      {
           name: 'RPG Online Game',
           status: 'New',
           dataHref: 'RPG',
