--- a/src/main.scss
+++ b/src/main.scss
@@ -70,6 +70,7 @@ body {
 .contacts,
 .portfolio,
 .RPG,
+.ganttChart,
 .thanos-effect,
 .english-learn,
 .performances,
@@ -90,6 +91,7 @@ body {
 [data-nav-wrapper='english-learn'] .english-learn,
 [data-nav-wrapper='portfolio'] .portfolio,
 [data-nav-wrapper='RPG'] .RPG,
+[data-nav-wrapper='ganttChart'] .ganttChart,
 [data-nav-wrapper='contacts'] .contacts,
 [data-nav-wrapper='performances'] .performances,
 [data-nav-wrapper='regexp'] .regexp,
