added miner game

--- a/src/main.scss
+++ b/src/main.scss
@@ -71,6 +71,7 @@ body {
 .portfolio,
 .RPG,
 .ganttChart,
+.miner,
 .thanos-effect,
 .english-learn,
 .performances,
@@ -92,6 +93,7 @@ body {
 [data-nav-wrapper='portfolio'] .portfolio,
 [data-nav-wrapper='RPG'] .RPG,
 [data-nav-wrapper='ganttChart'] .ganttChart,
+[data-nav-wrapper='miner'] .miner,
 [data-nav-wrapper='contacts'] .contacts,
 [data-nav-wrapper='performances'] .performances,
 [data-nav-wrapper='regexp'] .regexp,
