--- a/src/pages/myWorks/myWorks.pug
+++ b/src/pages/myWorks/myWorks.pug
@@ -1,6 +1,12 @@
 -
   var works = [
       {
+          name: 'Miner',
+          status: 'New',
+          dataHref: 'miner',
+          stack: ['HTML', 'CSS', 'Javascript'],
+      },
+      {
           name: 'Gantt Chart',
           status: 'New',
           dataHref: 'ganttChart',
@@ -8,7 +14,7 @@
       },
       {
           name: 'RPG Online Game',
-          status: 'New',
+          status: 'in process',
           dataHref: 'RPG',
           stack: ['HTML', 'CSS', 'JS', 'Canvas', 'Animations', 'Node', 'Hapi', 'Websockets', 'Chat'],
       },
