update cv and some text

--- a/src/pages/about/about.pug
+++ b/src/pages/about/about.pug
@@ -2,35 +2,42 @@
     var htmlSkills = [
         "HTML",
         "Accessibility",
+        "Bootstrap",
+        "Material Ui",
+        "Mantine Ui",
+        "Semantic Ui",
+        "Ant Design Ui",
         "Twig",
         "Pug",
-        "Bootstrap",
-        "MaterialUI",
-        "SemanticUI",
-        "Mantine",
     ];
     var cssSkills = [
         "Css",
-        "Less",
-        "Sass",
         "Scss",
+        "Sass",
+        "Less",
+        "Tailwind Css",
     ];
     var JSSkills = [
         "JavaScript",
         "JQuery",
+        "Node.js",
         "React",
         "Redux",
         "Thunk",
         "Redux Toolkit Query",
         "Zustand",
+        "Tanstack Query & Table",
         "TypeScript",
         "Next.js",
         "AMPS",
         "Lodash",
         "Ramda.js",
-        "AGGrid"
+        "AGGrid",
+        "GraphQL",
+        "Socket.io",
     ];
     var otherSkills = [
+        "Vite",
         "Webpack",
         "GraphQL",
         "Jest",
